--- a/build.xml
+++ b/build.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="Calculator" basedir="." default="run">
 
-    <!--<taskdef resource="net/sf/antcontrib/antlib.xml" uri="http://ant-contrib.sourceforge.net">-->
-    <!--<classpath>-->
-        <!--<pathelement location="lib/ant-contrib-1.0b3.jar"/>-->
-    <!--</classpath>-->
-<!--</taskdef>-->
     <property name="src.dir"  value="./src"/>
     <property name="build.dir" value="./classes"/>
     <property name="classes.dir" value="./classes"/>
@@ -16,17 +11,13 @@
 
     <property name="lib.dir"  value="${basedir}/lib"/>
 
+
     <path id="classpath">
-        <fileset dir="${lib.dir}">
+        <fileset dir="lib">
             <include name="**/*.jar" />
         </fileset>
     </path>
 
-    <path id = "classpath.test">
-        <pathelement location = "${junit}" />
-        <pathelement location = "${src.dir}" />
-        <path refid = "classpath" />
-    </path>
 
     <target name="clean">
         <delete dir="${build.dir}"/>
@@ -34,20 +25,25 @@
 
     <target name="compile" depends="clean">
         <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" includeantruntime="false"/>
+        <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" includeantruntime="false">
+        </javac>
+        <mkdir dir="${classes.dir}/lib"/>
+
+        <copy todir="${classes.dir}/lib">
+            <fileset dir="${lib.dir}">
+                <include name="**/*.jar"/>
+            </fileset>
+        </copy>
     </target>
 
     <target name="build" depends="compile">
         <mkdir dir="${jar.dir}"/>
         <jar destfile="${jar.dir}/Client.jar" basedir="${classes.dir}">
-            <fileset dir="lib">
-                <include name="junit-4.12.jar" />
-                <include name="MathParser.org-mXparser-4.1.1.jar"/>
-            </fileset>
-            <manifest>
-                <attribute name="Main-Class" value="${client-class}"/>
-            </manifest>
+                <manifest>
+            <attribute name="Main-Class" value="${client-class}"/>
+        </manifest>
         </jar>
+
         <jar destfile="${jar.dir}/Server.jar" basedir="${classes.dir}">
             <manifest>
                 <attribute name="Main-Class" value="${server-class}"/>
@@ -55,35 +51,33 @@
         </jar>
     </target>
 
-    <!--<target name="run" depends="build">-->
-
-        <!--<java jar="${jar.dir}/Server.jar" fork="true"/>-->
-
-        <!--<waitfor maxwait="2" maxwaitunit="second" timeoutproperty="failtimeout">-->
-            <!--<socket server="localhost" port="8189"/>-->
-        <!--</waitfor>-->
-
-        <!--<java jar="${jar.dir}/Client.jar" fork="true"/>-->
-
-    <!--</target>-->
 
     <target name="run" depends="build">
         <parallel>
-        <java jar="${jar.dir}/Server.jar" fork="true"/>
+            <java jar="${jar.dir}/Server.jar" fork="true" classpath="classpath">
 
-        <waitfor maxwait="5" maxwaitunit="seconds" timeoutproperty="failtimeout">
-            <socket server="localhost" port="8189"/>
-        </waitfor>
+            </java>
 
-        <java jar="${jar.dir}/Client.jar" fork="true"/>
+            <!--<waitfor maxwait="5" maxwaitunit="second" timeoutproperty="failtimeout">-->
+                <!--<socket server="localhost" port="8189"/>-->
+            <!--</waitfor>-->
+
+        <java jar="${jar.dir}/Client.jar" fork="true" classpath="classpath">
+
+
+        </java>
+
     </parallel>
     </target>
 
 
     <target name="test" depends="compile">
         <junit printsummary="on" fork="true" showoutput="true">
-            <classpath path="${classes.dir}">
-                <path refid="classpath" />
+            <classpath>
+                <pathelement location="${classes.dir}"/>
+                <pathelement location="lib/junit-4.12.jar"/>
+                <pathelement location="lib/hamcrest-core-1.3.jar"/>
+                <pathelement location="lib/MathParser.org-mXparser-4.1.1.jar"/>
             </classpath>
             <formatter type="brief" usefile="false"/>
             <test name="test_class.CalculatorTest"/>
